docs/i18n/ko/docusaurus-plugin-content-docs/version-4.2.3/api/Flicking.mdx
---
custom_edit_url: null
---

```ts
class Flicking extends Component
```

<div className="container">
  <div className="row mb-2"><div className="col col--4"><strong>Properties</strong></div><div className="col col--4"><strong>Methods</strong></div><div className="col col--4"><strong>Events</strong></div></div>
  <div className="row"><div className="col col--4"><a href="#VERSION">VERSION</a><span className="bulma-tag is-info ml-2">static</span><br/><a href="#control">control</a><br/><a href="#camera">camera</a><br/><a href="#renderer">renderer</a><br/><a href="#viewport">viewport</a><br/><a href="#initialized">initialized</a><br/><a href="#circularEnabled">circularEnabled</a><br/><a href="#index">index</a><br/><a href="#element">element</a><br/><a href="#currentPanel">currentPanel</a><br/><a href="#panels">panels</a><br/><a href="#panelCount">panelCount</a><br/><a href="#visiblePanels">visiblePanels</a><br/><a href="#animating">animating</a><br/><a href="#holding">holding</a><br/><a href="#activePlugins">activePlugins</a><br/><a href="#align">align</a><br/><a href="#defaultIndex">defaultIndex</a><br/><a href="#horizontal">horizontal</a><br/><a href="#circular">circular</a><br/><a href="#bound">bound</a><br/><a href="#adaptive">adaptive</a><br/><a href="#panelsPerView">panelsPerView</a><br/><a href="#noPanelStyleOverride">noPanelStyleOverride</a><br/><a href="#needPanelThreshold">needPanelThreshold</a><br/><a href="#preventEventsBeforeInit">preventEventsBeforeInit</a><br/><a href="#deceleration">deceleration</a><br/><a href="#easing">easing</a><br/><a href="#duration">duration</a><br/><a href="#inputType">inputType</a><br/><a href="#moveType">moveType</a><br/><a href="#threshold">threshold</a><br/><a href="#interruptable">interruptable</a><br/><a href="#bounce">bounce</a><br/><a href="#iOSEdgeSwipeThreshold">iOSEdgeSwipeThreshold</a><br/><a href="#preventClickOnDrag">preventClickOnDrag</a><br/><a href="#disableOnInit">disableOnInit</a><br/><a href="#renderOnlyVisible">renderOnlyVisible</a><br/><a href="#autoInit">autoInit</a><br/><a href="#autoResize">autoResize</a><br/><a href="#renderExternal">renderExternal</a></div><div className="col col--4"><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#prev">prev</a><br/><a href="#next">next</a><br/><a href="#moveTo">moveTo</a><br/><a href="#getPanel">getPanel</a><br/><a href="#enableInput">enableInput</a><br/><a href="#disableInput">disableInput</a><br/><a href="#getStatus">getStatus</a><br/><a href="#setStatus">setStatus</a><br/><a href="#addPlugins">addPlugins</a><br/><a href="#removePlugins">removePlugins</a><br/><a href="#resize">resize</a><br/><a href="#append">append</a><br/><a href="#prepend">prepend</a><br/><a href="#insert">insert</a><br/><a href="#remove">remove</a><br/><a href="#trigger">trigger</a><br/><a href="#once">once</a><br/><a href="#hasOn">hasOn</a><br/><a href="#on">on</a><br/><a href="#off">off</a></div><div className="col col--4"><a href="#event-ready">ready</a><br/><a href="#event-beforeResize">beforeResize</a><br/><a href="#event-afterResize">afterResize</a><br/><a href="#event-holdStart">holdStart</a><br/><a href="#event-holdEnd">holdEnd</a><br/><a href="#event-moveStart">moveStart</a><br/><a href="#event-move">move</a><br/><a href="#event-moveEnd">moveEnd</a><br/><a href="#event-willChange">willChange</a><br/><a href="#event-changed">changed</a><br/><a href="#event-willRestore">willRestore</a><br/><a href="#event-restored">restored</a><br/><a href="#event-select">select</a><br/><a href="#event-needPanel">needPanel</a><br/><a href="#event-visibleChange">visibleChange</a><br/><a href="#event-reachEdge">reachEdge</a><br/><a href="#event-panelChange">panelChange</a></div></div>
</div>

## Constructor
```ts
new Flicking(root, options)
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|root|HTMLElement \| string|||Flicking을 초기화할 HTMLElement로, `string` 타입으로 지정시 css 선택자 문자열을 지정해야 합니다.|
|options|object|✔️|{}|Flicking에 적용할 옵션 오브젝트|

## Properties
### VERSION {#VERSION}

<div className="bulma-tags">
  <span className="bulma-tag is-info">static</span>
  <span className="bulma-tag is-warning">readonly</span>
</div>

버전정보 문자열

**Type**: string

```ts
Flicking.VERSION;  // ex) 4.0.0
```

### control {#control}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 Flicking에 활성화된 [Control](Control) 인스턴스

**Type**: [Control](Control)

**Default**: [SnapControl](SnapControl)

**See**:
- [Control](Control)
- [SnapControl](SnapControl)
- [FreeControl](FreeControl)

### camera {#camera}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 Flicking에 활성화된 [Camera](Camera) 인스턴스

**Type**: [Camera](Camera)

**Default**: [LinearCamera](LinearCamera)

**See**:
- [Camera](Camera)
- [LinearCamera](LinearCamera)
- [BoundCamera](BoundCamera)
- [CircularCamera](CircularCamera)

### renderer {#renderer}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 Flicking에 활성화된 [Renderer](Renderer) 인스턴스

**Type**: [Renderer](Renderer)

**Default**: [VanillaRenderer](VanillaRenderer)

**See**:
- [Renderer](Renderer)
- [VanillaRenderer](VanillaRenderer)
- [ExternalRenderer](ExternalRenderer)

### viewport {#viewport}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

뷰포트 크기 정보를 담당하는 컴포넌트

**Type**: [Viewport](Viewport)

**See**:
- [Viewport](Viewport)

### initialized {#initialized}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

Flicking의 [init()](Flicking#init)이 호출되었는지를 나타내는 멤버 변수.
이 값은 [init()](Flicking#init)이 호출되었으면 `true`로 변하고, [destroy()](Flicking#destroy)호출 이후에 다시 `false`로 변경됩니다.

**Type**: boolean

**Default**: false

### circularEnabled {#circularEnabled}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

[circular](Flicking#circular) 옵션이 활성화되었는지 여부를 나타내는 멤버 변수.
[circular](Flicking#circular) 옵션은 패널의 크기의 합이 충분하지 않을 경우 비활성화됩니다.

**Type**: boolean

**Default**: false

### index {#index}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

[currentPanel](Flicking#currentPanel)의 인덱스 번호

**Type**: number

**Default**: 0

### element {#element}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

root(`.flicking-viewport`) 엘리먼트

**Type**: HTMLElement

### currentPanel {#currentPanel}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 선택된 패널

**Type**: [Panel](Panel)

**See**:
- [Panel](Panel)

### panels {#panels}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

전체 패널들의 배열

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### panelCount {#panelCount}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

전체 패널의 개수

**Type**: number

### visiblePanels {#visiblePanels}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 보이는 패널의 배열

**Type**: Array&lt;[Panel](Panel)&gt;

**See**:
- [Panel](Panel)

### animating {#animating}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 애니메이션 동작 여부

**Type**: boolean

### holding {#holding}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 사용자가 클릭/터치중인지 여부

**Type**: boolean

### activePlugins {#activePlugins}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

현재 활성화된 플러그인 목록

**Type**: Array&lt;[Plugin](Plugin)&gt;

### align {#align}

<div className="bulma-tags">

</div>

뷰포트 내에서 패널 정렬방식을 설정하는 옵션. 카메라와 패널 개별로 옵션을 설정할 수도 있습니다

**Type**: [ALIGN](ALIGN) \| string \| number \| Object

**Default**: "center"

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|panel|[ALIGN](ALIGN) \| string \| number|개개의 [Panel](Panel)에 적용할 값|
|camera|[ALIGN](ALIGN) \| string \| number|[Camera](Camera)에 적용할 값|

```ts
const possibleOptions = [
  // Literal strings
  "prev", "center", "next",
  // % values, applied to both panel & camera
  "0%", "25%", "42%",
  // px values, arithmetic calculation with (+/-) is also allowed.
  "0px", "100px", "50% - 25px",
  // numbers, same to number + px ("0px", "100px")
  0, 100, 1000,
  // Setting a different value for panel & camera
  { panel: "10%", camera: "25%" }
];

possibleOptions.forEach(align => {
  new Flicking("#el", { align });
});
```

### defaultIndex {#defaultIndex}

<div className="bulma-tags">

</div>

Flicking의 [init()](Flicking#init)이 호출될 때 이동할 디폴트 패널의 인덱스로, 0부터 시작하는 정수입니다

**Type**: number

**Default**: 0

### horizontal {#horizontal}

<div className="bulma-tags">

</div>

패널 이동 방향 (true: 가로방향, false: 세로방향)

**Type**: boolean

**Default**: true

### circular {#circular}

<div className="bulma-tags">

</div>

순환 모드를 활성화합니다. 순환 모드에서는 양 끝의 패널이 서로 연결되어 끊김없는 스크롤이 가능합니다.

**Type**: boolean

**Default**: false

### bound {#bound}

<div className="bulma-tags">

</div>

뷰(카메라 엘리먼트)가 첫번째와 마지막 패널 밖으로 넘어가지 못하게 하여, 첫번째/마지막 패널 전/후의 빈 공간을 보이지 않도록 하는 옵션입니다
`circular=false`인 경우에만 사용할 수 있습니다

**Type**: boolean

**Default**: false

### adaptive {#adaptive}

<div className="bulma-tags">

</div>

이동한 후 뷰포트 엘리먼트의 크기를 현재 패널의 높이와 동일하게 설정합니다. `horizontal=true`인 경우에만 사용할 수 있습니다.

**Type**: boolean

**Default**: false

### panelsPerView {#panelsPerView}

<div className="bulma-tags">

</div>

한 화면에 보이는 패널의 개수. 이 옵션을 활성화할 경우 패널의 크기를 강제로 재조정합니다

**Type**: number

**Default**: -1

### noPanelStyleOverride {#noPanelStyleOverride}

<div className="bulma-tags">

</div>

이 옵션을 활성화할 경우, [Flicking#panelsPerView](Flicking#panelsPerView) 옵션이 활성화되었을 때 패널의 `width/height` 스타일을 변경하지 않도록 설정합니다.
모든 패널들의 크기를 직접 관리하고 있을 경우, 이 옵션을 활성화하면 성능면에서 유리할 수 있습니다

**Type**: boolean

**Default**: false

### needPanelThreshold {#needPanelThreshold}

<div className="bulma-tags">

</div>

`needPanel`이벤트가 발생하기 위한 뷰포트 끝으로부터의 최대 거리

**Type**: number

**Default**: 0

### preventEventsBeforeInit {#preventEventsBeforeInit}

<div className="bulma-tags">

</div>

활성화할 경우 초기화시 `ready` 이벤트 이전의 이벤트가 발생하지 않습니다.

**Type**: boolean

**Default**: true

### deceleration {#deceleration}

<div className="bulma-tags">

</div>

사용자의 동작으로 가속도가 적용된 패널 이동 애니메이션의 감속도. 값이 높을수록 애니메이션 실행 시간이 짧아집니다

**Type**: number

**Default**: 0.0075

### easing {#easing}

<div className="bulma-tags">

</div>

패널 이동 애니메이션에 적용할 easing 함수. 기본값은 `easeOutCubic`이다

**Type**: function

**Default**: x =&gt; 1 - Math.pow(1 - x, 3)

**See**:
- 이징 함수 Cheat Sheet [http://easings.net/](http://easings#net/)

### duration {#duration}

<div className="bulma-tags">

</div>

디폴트 애니메이션 재생 시간 (ms)

**Type**: number

**Default**: 500

### inputType {#inputType}

<div className="bulma-tags">

</div>

활성화할 입력 장치 종류

**Type**: Array&lt;string&gt;

**Default**: ["touch", "mouse"]

**See**:
- [가능한 값들 (PanInputOption#inputType)](https://naver#github#io/egjs-axes/release/latest/doc/global#html#PanInputOption)

### moveType {#moveType}

<div className="bulma-tags">

</div>

사용자 입력에 의한 이동 방식. 이 값에 따라 [Flicking#control](Flicking#control)의 인스턴스 타입이 결정됩니다
상수 [MOVE_TYPE](MOVE_TYPE)에 정의된 값들을 이용할 수 있습니다

**Type**: [MOVE_TYPE](MOVE_TYPE) \| Pair.&lt;string, object&gt;

**Default**: "snap"

|moveType|control|options|
|:---:|:---:|:---:|
|"snap"|{@link SnapControl}||
|"freeScroll"|{@link FreeControl}|{@link FreeControlOptions}|

```ts
import Flicking, { MOVE_TYPE } from "@egjs/flicking";

const flicking = new Flicking({
  moveType: MOVE_TYPE.SNAP
});
```

```ts
const flicking = new Flicking({
  // If you want more specific settings for the moveType
  // [moveType, options for that moveType]
  // In this case, it's ["freeScroll", FreeControlOptions]
  moveType: [MOVE_TYPE.FREE_SCROLL, { stopAtEdge: true }]
});
```

### threshold {#threshold}

<div className="bulma-tags">

</div>

패널 변경을 위한 이동 임계값 (단위: px). 주어진 값 이상으로 스크롤해야만 패널 변경이 가능하다.

**Type**: number

**Default**: 40

### interruptable {#interruptable}

<div className="bulma-tags">

</div>

사용자의 클릭/터치로 인해 애니메이션을 도중에 멈출 수 있도록 설정합니다.

**Type**: boolean

**Default**: true

### bounce {#bounce}

<div className="bulma-tags">

</div>

Flicking이 최대 영역을 넘어서 갈 수 있는 최대 크기. `circular=false`인 경우에만 사용할 수 있습니다.
배열을 통해 prev/next 방향에 대해 서로 다른 바운스 값을 지정할 수 있습니다.
`number`를 통해 px값을, `stirng`을 통해 px 혹은 뷰포트 크기 대비 %값을 사용할 수 있습니다.
이 값을 변경시 [Control#updateInput](Control#updateInput)를 호출해야 합니다.

**Type**: string \| number \| Array&lt;(string\|number)&gt;

**Default**: "20%"

```ts
const possibleOptions = [
  // % values, relative to viewport element(".flicking-viewport")'s size
  "0%", "25%", "42%",
  // px values, arithmetic calculation with (+/-) is also allowed.
  "0px", "100px", "50% - 25px",
  // numbers, same to number + px ("0px", "100px")
  0, 100, 1000
];
```

```ts
const flicking = new Flicking("#el", { bounce: "20%" });

flicking.bounce = "100%";
flicking.control.updateInput(); // Call this to update!
```

### iOSEdgeSwipeThreshold {#iOSEdgeSwipeThreshold}

<div className="bulma-tags">

</div>

iOS Safari에서 swipe를 통한 뒤로가기/앞으로가기를 활성화하는 오른쪽 끝으로부터의 영역의 크기 (px)

**Type**: number

**Default**: 30

### preventClickOnDrag {#preventClickOnDrag}

<div className="bulma-tags">

</div>

사용자가 뷰포트 영역을 1픽셀이라도 드래그했을 경우 자동으로 [click](https://developer#mozilla#org/ko/docs/Web/API/Element/click_event) 이벤트를 취소합니다

**Type**: boolean

**Default**: true

### disableOnInit {#disableOnInit}

<div className="bulma-tags">

</div>

Flicking init시에 [disableInput()](Flicking#disableInput)을 바로 호출합니다

**Type**: boolean

**Default**: false

### renderOnlyVisible {#renderOnlyVisible}

<div className="bulma-tags">

</div>

보이는 패널만 렌더링할지 여부를 설정합니다. 패널이 많을 경우에 퍼포먼스를 크게 향상시킬 수 있습니다.

**Type**: boolean

**Default**: false

### autoInit {#autoInit}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

Flicking 인스턴스를 생성할 때 자동으로 [init()](Flicking#init)를 호출합니다

**Type**: boolean

**Default**: true

### autoResize {#autoResize}

<div className="bulma-tags">

</div>

Flicking의 [resize](Flicking#resize) 메소드를 window의 resize 이벤트 핸들러로 등록합니다.
설정시 window 창 크기 및 orientation 변경에 의해 자동으로 [resize](Flicking#resize)를 호출합니다.

**Type**: boolean

**Default**: true

### renderExternal {#renderExternal}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
</div>

프레임워크(React, Vue, Angular, ...)에서만 사용하는 옵션으로, 자동으로 설정되므로 따로 사용하실 필요 없습니다!

**Type**: boolean

**Default**: false

<div className="notification is-warning my-2">⚠️ This member is for <strong>internal</strong> use only.</div>
## Methods

### init {#init}

<div className="bulma-tags">
  <span className="bulma-tag is-success">async</span>
</div>

Flicking을 초기화하고, 디폴트 인덱스로 이동합니다
이 메소드는 `autoInit` 옵션이 true(default)일 경우 Flicking이 생성될 때 자동으로 호출됩니다

**Returns**: this

**Emits**: [Flicking#event:ready](Flicking#event-ready)

### destroy {#destroy}

<div className="bulma-tags">

</div>

Flicking과 하위 컴포넌트들을 초기 상태로 되돌리고, 부착된 모든 이벤트 핸들러를 제거합니다

**Returns**: void

### prev {#prev}

<div className="bulma-tags">
  <span className="bulma-tag is-success">async</span>
</div>

이전 패널로 이동합니다 (현재 인덱스 - 1)

**Returns**: Promise&lt;void&gt;
- 이전 패널 도달시에 resolve되는 Promise

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|duration|number|✔️|[options.duration](Flicking#duration)|패널 이동 애니메이션 진행 시간 (단위: ms)|

**Throws**: [FlickingError](FlickingError)

|code|condition|
|---|---|
|[INDEX_OUT_OF_RANGE](ERROR_CODE)|이전 패널이 존재하지 않을 경우|
|[ANIMATION_ALREADY_PLAYING](ERROR_CODE)|애니메이션이 이미 진행중인 경우|
|[ANIMATION_INTERRUPTED](ERROR_CODE)|사용자 입력에 의해 애니메이션이 중단된 경우|
|[STOP_CALLED_BY_USER](ERROR_CODE)|발생된 이벤트들 중 하나라도 `stop()`이 호출된 경우|

### next {#next}

<div className="bulma-tags">
  <span className="bulma-tag is-success">async</span>
</div>

다음 패널로 이동합니다 (현재 인덱스 + 1)

**Returns**: Promise&lt;void&gt;
- 다음 패널 도달시에 resolve되는 Promise

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|duration|number|✔️|[options.duration](Flicking#duration)|패널 이동 애니메이션 진행 시간 (단위: ms)|

**Throws**: [FlickingError](FlickingError)

|code|condition|
|---|---|
|[INDEX_OUT_OF_RANGE](ERROR_CODE)|다음 패널이 존재하지 않을 경우|
|[ANIMATION_ALREADY_PLAYING](ERROR_CODE)|애니메이션이 이미 진행중인 경우|
|[ANIMATION_INTERRUPTED](ERROR_CODE)|사용자 입력에 의해 애니메이션이 중단된 경우|
|[STOP_CALLED_BY_USER](ERROR_CODE)|발생된 이벤트들 중 하나라도 `stop()`이 호출된 경우|

### moveTo {#moveTo}

<div className="bulma-tags">
  <span className="bulma-tag is-success">async</span>
</div>

주어진 인덱스에 해당하는 패널로 이동합니다

**Returns**: Promise&lt;void&gt;
- 해당 패널 도달시에 resolve되는 Promise

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||이동할 패널의 인덱스|
|duration|number|✔️|[options.duration](Flicking#duration)|애니메이션 진행 시간 (단위: ms)|
|direction|[DIRECTION](DIRECTION)|✔️|DIRECTION.NONE|이동할 방향. [circular](Flicking#circular) 옵션 활성화시에만 사용 가능합니다|

**Throws**: [FlickingError](FlickingError)

|code|condition|
|---|---|
|[INDEX_OUT_OF_RANGE](ERROR_CODE)|해당 인덱스를 가진 패널이 존재하지 않을 경우|
|[ANIMATION_ALREADY_PLAYING](ERROR_CODE)|애니메이션이 이미 진행중인 경우|
|[ANIMATION_INTERRUPTED](ERROR_CODE)|사용자 입력에 의해 애니메이션이 중단된 경우|
|[STOP_CALLED_BY_USER](ERROR_CODE)|발생된 이벤트들 중 하나라도 `stop()`이 호출된 경우|

### getPanel {#getPanel}

<div className="bulma-tags">

</div>

주어진 인덱스에 해당하는 [Panel](Panel)을 반환합니다. 주어진 인덱스에 해당하는 패널이 존재하지 않을 경우 `null`을 반환합니다.

**Returns**: [Panel](Panel) \| null
- 주어진 인덱스에 해당하는 패널

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number||||

**See**:
- [Panel](Panel)
```ts
const panel = flicking.getPanel(0);
// Which is a shorthand to...
const samePanel = flicking.panels[0];
```

### enableInput {#enableInput}

<div className="bulma-tags">

</div>

사용자의 입력(마우스/터치)를 활성화합니다

**Returns**: this

### disableInput {#disableInput}

<div className="bulma-tags">

</div>

사용자의 입력(마우스/터치)를 막습니다

**Returns**: this

### getStatus {#getStatus}

<div className="bulma-tags">

</div>

현재 상태를 반환합니다. 반환받은 값을 [setStatus()](Flicking#setStatus) 메소드의 인자로 지정하면 현재 상태를 복원할 수 있습니다

**Returns**: Partial&lt;[Status](Status)&gt;
- 현재 상태값 정보를 가진 객체.

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|options|object|✔️|{}|Status 반환 옵션|
|options.index|boolean|✔️|true|현재 패널 인덱스를 반환값에 포함시킵니다. [setStatus](Flicking#setStatus) 호출시 자동으로 해당 인덱스로 카메라를 움직입니다|
|options.position|boolean|✔️|true|카메라의 현재 위치를 반환값에 포함시킵니다. 이 옵션은 [moveType](Flicking#moveType)이 `freeScroll`일 경우에만 동작합니다|
|options.includePanelHTML|boolean|✔️|false|패널의 `outerHTML`을 반환값에 포함시킵니다|
|options.visiblePanelsOnly|boolean|✔️|false|현재 보이는 패널([visiblePanel](Flicking#visiblePanel))의 HTML만 반환합니다. `includePanelHTML`이 `true`일 경우에만 동작합니다.|

### setStatus {#setStatus}

<div className="bulma-tags">

</div>

주어진 [Status](Status)의 상태로 복원합니다

**Returns**: void

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|status|Partial&lt;[Status](Status)&gt;|||복원할 상태 값. [getStatus()](Flicking#getStatus) 메서드의 반환값을 지정하면 됩니다|

### addPlugins {#addPlugins}

<div className="bulma-tags">

</div>

플리킹에 다양한 효과를 부여할 수 있는 플러그인을 추가합니다

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|plugins|[Plugin](Plugin)|||추가할 플러그인(들)|

**See**:
- https://github.com/naver/egjs-flicking-plugins

### removePlugins {#removePlugins}

<div className="bulma-tags">

</div>

플리킹으로부터 플러그인들을 제거합니다.

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|plugin|[Plugin](Plugin)|||제거 플러그인(들).|

**See**:
- https://github.com/naver/egjs-flicking-plugins

### resize {#resize}

<div className="bulma-tags">
  <span className="bulma-tag is-success">async</span>
</div>

패널 및 뷰포트의 크기를 갱신합니다

**Returns**: this

**Emits**: [Flicking#event:beforeResize](Flicking#event-beforeResize), [Flicking#event:afterResize](Flicking#event-afterResize)

### append {#append}

<div className="bulma-tags">

</div>

패널 목록의 제일 끝에 새로운 패널들을 추가합니다

**Returns**: Array&lt;[Panel](Panel)&gt;
- 추가된 패널들의 배열

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|element|[ElementLike](ElementLike) \| Array&lt;[ElementLike](ElementLike)&gt;|||새로운 HTMLElement, 혹은 엘리먼트의 outerHTML, 혹은 그것들의 배열|

**Throws**: [FlickingError](FlickingError)

[ERROR_CODE.NOT_ALLOWED_IN_FRAMEWORK](ERROR_CODE) if called on frameworks (React, Angular, Vue...)
**See**:
- [Panel](Panel)
- [ElementLike](ElementLike)
```ts
const flicking = new Flicking("#flick");
// These are possible parameters
flicking.append(document.createElement("div"));
flicking.append("\<div\>Panel\</div\>");
flicking.append(["\<div\>Panel\</div\>", document.createElement("div")]);
// Even this is possible
flicking.append("\<div\>Panel 1\</div\>\<div\>Panel 2\</div\>");
```

### prepend {#prepend}

<div className="bulma-tags">

</div>

패널 목록의 제일 앞(index 0)에 새로운 패널들을 추가합니다
추가한 패널의 개수만큼 기존 패널들의 인덱스가 증가합니다.

**Returns**: Array&lt;[Panel](Panel)&gt;
- 추가된 패널들의 배열

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|element|[ElementLike](ElementLike) \| Array&lt;[ElementLike](ElementLike)&gt;|||새로운 HTMLElement, 혹은 엘리먼트의 outerHTML, 혹은 그것들의 배열|

**Throws**: [FlickingError](FlickingError)

[ERROR_CODE.NOT_ALLOWED_IN_FRAMEWORK](ERROR_CODE) if called on frameworks (React, Angular, Vue...)
**See**:
- [Panel](Panel)
- [ElementLike](ElementLike)
```ts
const flicking = new eg.Flicking("#flick");
flicking.prepend(document.createElement("div"));
flicking.prepend("\<div\>Panel\</div\>");
flicking.prepend(["\<div\>Panel\</div\>", document.createElement("div")]);
// Even this is possible
flicking.prepend("\<div\>Panel 1\</div\>\<div\>Panel 2\</div\>");
```

### insert {#insert}

<div className="bulma-tags">

</div>

주어진 인덱스에 새로운 패널들을 추가합니다
해당 인덱스보다 같거나 큰 인덱스를 가진 기존 패널들은 추가한 패널의 개수만큼 인덱스가 증가합니다.

**Returns**: Array&lt;[Panel](Panel)&gt;
- 추가된 패널들의 배열

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||새로 패널들을 추가할 인덱스|
|element|[ElementLike](ElementLike) \| Array&lt;[ElementLike](ElementLike)&gt;|||새로운 HTMLElement, 혹은 엘리먼트의 outerHTML, 혹은 그것들의 배열|

**Throws**: [FlickingError](FlickingError)

[ERROR_CODE.NOT_ALLOWED_IN_FRAMEWORK](ERROR_CODE) if called on frameworks (React, Angular, Vue...)

```ts
const flicking = new eg.Flicking("#flick");
flicking.insert(0, document.createElement("div"));
flicking.insert(2, "\<div\>Panel\</div\>");
flicking.insert(1, ["\<div\>Panel\</div\>", document.createElement("div")]);
// Even this is possible
flicking.insert(3, "\<div\>Panel 1\</div\>\<div\>Panel 2\</div\>");
```

### remove {#remove}

<div className="bulma-tags">

</div>

주어진 인덱스의 패널을 제거합니다
해당 인덱스보다 큰 인덱스를 가진 기존 패널들은 제거한 패널의 개수만큼 인덱스가 감소합니다

**Returns**: Array&lt;[Panel](Panel)&gt;
- 제거된 패널들의 배열

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|index|number|||제거할 패널의 인덱스|
|deleteCount|number|✔️|1|`index` 이후로 제거할 패널의 개수|

### trigger {#trigger}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

커스텀 이벤트를 발생시킨다

**Returns**: this
- 컴포넌트 자신의 인스턴스

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|event|string \| ComponentEvent|||발생할 커스텀 이벤트의 이름 또는 ComponentEvent의 인스턴스|
|params|Array&lt;any&gt; \| $ts:...|||커스텀 이벤트가 발생할 때 전달할 데이터|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  beforeHi: ComponentEvent<{ foo: number; bar: string }>;
  hi: { foo: { a: number; b: boolean } };
  someEvent: (foo: number, bar: string) => void;
  someOtherEvent: void; // When there's no event argument
}> {
  some(){
    if(this.trigger("beforeHi")){ // When event call to stop return false.
      this.trigger("hi");// fire hi event.
    }
  }
}

const some = new Some();
some.on("beforeHi", e => {
  if(condition){
    e.stop(); // When event call to stop, `hi` event not call.
  }
  // `currentTarget` is component instance.
  console.log(some === e.currentTarget); // true

  typeof e.foo; // number
  typeof e.bar; // string
});
some.on("hi", e => {
  typeof e.foo.b; // boolean
});
// If you want to more know event design. You can see article.
// https://github.com/naver/egjs-component/wiki/How-to-make-Component-event-design%3F
```

### once {#once}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

이벤트가 한번만 실행된다.

**Returns**: this
- 컴포넌트 자신의 인스턴스

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string \| $ts:...|||등록할 이벤트의 이름 또는 이벤트 이름-핸들러 오브젝트|
|handlerToAttach|function \| $ts:...|✔️||등록할 이벤트의 핸들러 함수|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  hi: ComponentEvent;
}> {
  hi() {
    alert("hi");
  }
  thing() {
    this.once("hi", this.hi);
  }
}

var some = new Some();
some.thing();
some.trigger(new ComponentEvent("hi"));
// fire alert("hi");
some.trigger(new ComponentEvent("hi"));
// Nothing happens
```

### hasOn {#hasOn}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

컴포넌트에 이벤트가 등록됐는지 확인한다.

**Returns**: boolean
- 이벤트 등록 여부

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string|||등록 여부를 확인할 이벤트의 이름|

```ts
import Component from "@egjs/component";

class Some extends Component<{
  hi: void;
}> {
  some() {
    this.hasOn("hi");// check hi event.
  }
}
```

### on {#on}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

컴포넌트에 이벤트를 등록한다.

**Returns**: this
- 컴포넌트 자신의 인스턴스

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string \| $ts:...|||등록할 이벤트의 이름 또는 이벤트 이름-핸들러 오브젝트|
|handlerToAttach|function \| $ts:...|✔️||등록할 이벤트의 핸들러 함수|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  hi: void;
}> {
  hi() {
    console.log("hi");
  }
  some() {
    this.on("hi",this.hi); //attach event
  }
}
```

### off {#off}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

컴포넌트에 등록된 이벤트를 해제한다.<br/>`eventName`이 주어지지 않았을 경우 모든 이벤트 핸들러를 제거한다.<br/>`handlerToAttach`가 주어지지 않았을 경우 `eventName`에 해당하는 모든 이벤트 핸들러를 제거한다.

**Returns**: this
- 컴포넌트 자신의 인스턴스

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|eventName|string \| $ts:...|✔️||해제할 이벤트의 이름|
|handlerToDetach|function \| $ts:...|✔️||해제할 이벤트의 핸들러 함수|

```ts
import Component, { ComponentEvent } from "@egjs/component";

class Some extends Component<{
  hi: void;
}> {
  hi() {
    console.log("hi");
  }
  some() {
    this.off("hi",this.hi); //detach event
  }
}
```

## Events
### ready {#event-ready}

<div className="bulma-tags">

</div>

Flicking의 [init()](Flicking#init)이 호출되었을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|

### beforeResize {#event-beforeResize}

<div className="bulma-tags">

</div>

Flicking의 [resize())](Flicking#resize)이 호출되었을 때 발생하는 이벤트로, 패널 및 뷰포트의 크기를 업데이트하기 전에 발생합니다.
이 이벤트 단계에서 패널 및 뷰포트의 크기를 업데이트할 경우, 해당 크기가 최종적으로 반영됩니다.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|width|number|기존 뷰포트 너비|
|height|number|기존 뷰포트 높이|
|element|HTMLElement|뷰포트 엘리먼트|

### afterResize {#event-afterResize}

<div className="bulma-tags">

</div>

Flicking의 [resize())](Flicking#resize)이 호출되었을 때 발생하는 이벤트로, 패널 및 뷰포트의 크기를 업데이트한 이후에 발생합니다.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|width|number|업데이트된 뷰포트 너비|
|height|number|업데이트된 뷰포트 높이|
|prev|object|기존 뷰포트 크기|
|prev.width|number|기존 뷰포트 너비|
|prev.height|number|기존 뷰포트 높이|
|sizeChanged|boolean|뷰포트 너비/크기가 변경되었는지 여부를 나타내는 값|
|element|HTMLElement|뷰포트 엘리먼트|

### holdStart {#event-holdStart}

<div className="bulma-tags">

</div>

사용자가 드래그를 시작했을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|stop|function|이벤트 동작을 멈추고, 사용자가 드래그하지 못하도록 막습니다.|
|axesEvent|object|[Axes](https://naver#github#io/egjs-axes/)의 [hold](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-hold) 이벤트|

### holdEnd {#event-holdEnd}

<div className="bulma-tags">

</div>

사용자가 드래그를 끝냈을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|axesEvent|object|[Axes](https://naver#github#io/egjs-axes/)의 [release](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-release) 이벤트|

### moveStart {#event-moveStart}

<div className="bulma-tags">

</div>

첫 번째 [move](Flicking#event-move) 이벤트 직전에 단 한번 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|stop|function|이벤트 동작을 멈추고, 사용자가 드래그하지 못하도록 막습니다.|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|
|holding|boolean|사용자가 현재 viewport 엘리먼트를 드래그하고있는지를 나타내는 값|
|direction|[DIRECTION](DIRECTION)|이전 카메라 위치 대비 이동 방향|
|axesEvent|object|[Axes](https://naver#github#io/egjs-axes/)의 [change](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-change) 이벤트|

### move {#event-move}

<div className="bulma-tags">

</div>

이동시마다 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|stop|function|이벤트 동작을 멈추고, 사용자가 드래그하지 못하도록 막습니다.|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|
|holding|boolean|사용자가 현재 viewport 엘리먼트를 드래그하고있는지를 나타내는 값|
|direction|[DIRECTION](DIRECTION)|이전 카메라 위치 대비 이동 방향|
|axesEvent|object|[Axes](https://naver#github#io/egjs-axes/)의 [change](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-change) 이벤트|

### moveEnd {#event-moveEnd}

<div className="bulma-tags">

</div>

사용자 입력 중단/애니메이션 종료 등 이동이 끝났을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|
|holding|boolean|사용자가 현재 viewport 엘리먼트를 드래그하고있는지를 나타내는 값|
|direction|[DIRECTION](DIRECTION)|이전 카메라 위치 대비 이동 방향|
|axesEvent|object|[Axes](https://naver#github#io/egjs-axes/)의 [finish](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-finish) 이벤트|

### willChange {#event-willChange}

<div className="bulma-tags">

</div>

Flicking의 인덱스가 변경될 것임을 나타내는 이벤트. 실제 인덱스는 [changed](Flicking#event-changed) 이벤트에서 변경된다.
사용자가 입력을 마쳤을 때, 혹은 메소드를 통해 이동을 시작했을 때 발생한다.
이벤트의 stop()을 호출시 인덱스 변경 및 패널로의 이동을 막는다.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|stop|function|이벤트 동작을 멈추고, 사용자가 드래그하지 못하도록 막습니다.|
|index|number|변경할 인덱스|
|panel|[Panel](Panel)|인덱스 변경 이후 활성화된 패널로 설정할 패널|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|
|direction|[DIRECTION](DIRECTION)|현재 활성화된 패널로부터 이동하고자 하는 패널의 방향|

### changed {#event-changed}

<div className="bulma-tags">

</div>

Event that fires when Flicking's index is changed.

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|index|number|새 인덱스|
|panel|[Panel](Panel)|새로 선택된 패널|
|prevIndex|number|이전 인덱스|
|prevPanel|[Panel](Panel) \| null|이전 패널|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|
|direction|[DIRECTION](DIRECTION)|현재 활성화된 패널로부터 이동하고자 하는 패널의 방향|

### willRestore {#event-willRestore}

<div className="bulma-tags">

</div>

사용자가 드래그하여 이동한 거리가 [threshold](Flicking#threshold)에 도달하지 못해, 기존 [currentPanel](Flicking#currentPanel)로 돌아갈 것임을 나타내는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|stop|function|이벤트 동작을 멈추고, 사용자가 드래그하지 못하도록 막습니다|
|index|number|복귀하고자 하는 패널의 인덱스|
|panel|[Panel](Panel)|복귀하고자 하는 패널|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|
|direction|[DIRECTION](DIRECTION)|이전 카메라 위치 대비 이동 방향|

### restored {#event-restored}

<div className="bulma-tags">

</div>

Flicking이 [currentPanel](Flicking#currentPanel)의 위치로 다시 돌아왔을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|isTrusted|boolean|이벤트가 사용자 입력에 의하여 발생되었는지를 나타내는 값|

### select {#event-select}

<div className="bulma-tags">

</div>

패널이 정적으로 클릭(혹은 터치)되었을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|index|number|선택된 패널의 인덱스|
|panel|[Panel](Panel)|선택된 패널|
|direction|[DIRECTION](DIRECTION)|현재 카메라 위치 대비 선택된 패널의 위치|

### needPanel {#event-needPanel}

<div className="bulma-tags">

</div>

빈 패널 영역이 뷰포트 끝에 도달했을 때 발생하는 이벤트
[needPanelThreshold](Flicking#needPanelThreshold)를 이용해서 이벤트가 발생하는 지점을 조절할 수 있습니다

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|direction|[DIRECTION](DIRECTION)|패널이 필요한 방향. `DIRECTION.PREV`의 경우 패널이 [prepend](Flicking#prepend)되어야 함을 의미하고, `DIRECTION.NEXT`는 패널이 [append](Flicking#append)되어야 함을 의미한다|

### visibleChange {#event-visibleChange}

<div className="bulma-tags">

</div>

현재 뷰포트 내에서 보이는 패널이 변경되었을 때 발생되는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|added|Array&lt;[Panel](Panel)&gt;|새로 보이는 패널의 배열|
|removed|Array&lt;[Panel](Panel)&gt;|보이지 않게 된 패널의 배열|
|visiblePanels|Array&lt;[Panel](Panel)&gt;|현재 보이는 패널의 배열|

### reachEdge {#event-reachEdge}

<div className="bulma-tags">

</div>

카메라가 이동 가능한 영역의 끝에 도달했을 때 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|direction|[DIRECTION](DIRECTION)|카메라의 위치가 이동 가능한 범위의 최대점([DIRECTION.NEXT](DIRECTION)) 혹은 최소점([DIRECTION.PREV](DIRECTION))에 도달했는지를 나타내는 값|

### panelChange {#event-panelChange}

<div className="bulma-tags">

</div>

패널 추가/제거시에 발생하는 이벤트

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|currentTarget|[Flicking](Flicking)|이 이벤트를 트리거한 Flicking의 인스턴스|
|eventType|string|이벤트명|
|added|Array&lt;[Panel](Panel)&gt;|새로 추가된 패널의 배열|
|removed|Array&lt;[Panel](Panel)&gt;|제거된 패널의 배열|

